(layout) Prevent package icons from being squashed
Sometimes on smaller viewports, package icons appeared squished and
distorted. A slight change to the layout has been made to prevent this
from happening.

--- a/chocolatey/Website/Content/packages.css
+++ b/chocolatey/Website/Content/packages.css
@@ -91,6 +91,10 @@ textarea {
     max-height: 500px;
     overflow: auto;
 }
+
+.package-image-header {
+    max-width: 50px;
+}
 /*Package Sidebar*/
 #package-sidebar .package-logo {
     max-width: 40px;
